# django-rest-auth-ex

./: .gitignore  Untitled.ipynb  pyproject.toml
app/config/: settings.py  urls.py
app/members/: views.py
app/members/migrations/: 0001_initial.py
